# WM-final

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose-app.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: api_router.py  main.py
app/admin/: admin_app.py  auth_provider.py
app/admin/views/: __init__.py  meeting.py  relation.py  role.py  structure.py  team.py  user.py  work_task.py
app/core/: config.py  lifespan.py  model_adapter.py
app/core/database/: __init__.py  base_model.py  db_connector.py
app/core/models/: __init__.py  base_model.py
app/core/redis/: __init__.py  redis_connector.py
app/meetings/: exceptions.py  routes.py  service.py
app/meetings/adapters/: meeting_adapter.py
app/meetings/models/: __init__.py  meeting.py
app/meetings/schemas/: meeting.py
app/migration_utils/: __main__.py  runner.py
app/migration_utils/alembic/: env.py
app/scripts/: create_superuser.py
app/structures/: relations_routes.py  roles_routes.py  routes.py  structures_routes.py  teams_routes.py
app/structures/adapters/: model_adapter.py  relation_adapter.py  role_adapter.py  structure_adapter.py
app/structures/dependencies/: role.py
app/structures/exceptions/: relation.py  role.py  structure.py
app/structures/models/: __init__.py  relation.py  role.py  structure.py  team.py
app/structures/schemas/: realtion.py  role.py  structure.py  team.py
app/structures/services/: relation.py  role.py  structure.py
app/users/: auth_routes.py  exceptions.py  routers.py  users_routes.py
app/users/auth/: __init__.py  transport.py  user_manager.py
app/users/dependencies/: access_tokens.py  backend.py  fastapi_users_routes.py  strategy.py  user_manager.py  users.py
app/users/models/: __init__.py  access_token.py  user.py
app/users/schemas/: __init__.py  user.py
app/utils/: check_after_now.py  check_time.py  check_today.py  get_date_days_ago.py
app/work_tasks/: exceptions.py  routes.py  service.py
app/work_tasks/adapters/: work_task_adapter.py
app/work_tasks/models/: __init__.py  work_task.py
app/work_tasks/schemas/: __init__.py  work_task.py
(+15 files in other folders)
